# vex

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  flake.nix  security.md  vex.tmux
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  release-trigger.yml  release.yml
crates/vex/: Cargo.toml
crates/vex-cli/: Cargo.toml
crates/vex-cli/src/: lib.rs  proto.rs  user_config.rs  vex_home.rs
crates/vex-cli/src/proto/: mod.rs
crates/vex-proto/: Cargo.toml
crates/vex/src/: config.rs  connect.rs  main.rs
crates/vexd/: Cargo.toml
crates/vexd/src/: local.rs  main.rs
crates/vexd/src/auth/: mod.rs
crates/vexd/src/server/: mod.rs  tcp.rs  unix.rs
src/: cache.rs  cli.rs  config.rs  error.rs  git.rs  github.rs  main.rs  repo.rs  tmux.rs  tui.rs  worker.rs  workstream.rs
tests/: agent.bats  auth.bats  e2e.bats  integration.rs  project.bats  repo.bats  session.bats  shell.bats  workstream.bats
tests/mock-claude/: claude
web/: cypress.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/vex/: route.ts
web/app/app/: page.tsx
web/components/: connect-form.tsx  connection-provider.tsx  status-display.tsx
web/cypress/e2e/: auth.cy.ts  project.cy.ts  repo.cy.ts
web/cypress/support/: e2e.ts
web/lib/: types.ts  vex-client.ts
