[package]
name = "vex-cli"
version = "0.2.11"
edition = "2024"
description = "Parallel workstream manager using git worktrees and tmux"
license = "MIT"
repository = "https://github.com/sandipndev/vex"
homepage = "https://github.com/sandipndev/vex"
keywords = ["tmux", "git", "worktree", "workflow", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "vex"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
