[package]
name = "vex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "vex"
path = "src/bin/vex/main.rs"

[[bin]]
name = "vexd"
path = "src/bin/vexd/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
blake3 = "1"
subtle = "2"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
tokio-rustls = "0.26"
qrcode = "0.14"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
daemonize = "0.5"
toml = "0.8"
serde_yaml = "0.9"
libc = "0.2"
portable-pty = "0.8"
ratatui = "0.29"
crossterm = "0.28"
