[package]
name = "vex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "vex"
path = "src/bin/vex/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
pty-process = { version = "0.5", features = ["async"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.31", features = ["term", "signal", "process"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
terminal_size = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
