[package]
name = "vex"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vex"
path = "src/main.rs"

[dependencies]
vex-proto = { path = "../vex-proto" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"
anyhow = "1"
base64 = "0.22"
blake3 = "1"
